--- a/views/index.ejs
+++ b/views/index.ejs
@@ -494,7 +494,7 @@
                     Download videos without watermarks. This allows you to use the video cleanly and professionally anywhere you want.
                 </p>
             </div>
-            <img src="https://i.imgur.com/your-image-url-1.png" alt="No Watermark Download" class="feature-img">
+            <img src="https://i.imgur.com/2JgR6c2.png" alt="No Watermark Download" class="feature-img">
         </div>
         
         <div class="feature-item reverse">
